fix footer text align on small screens

--- a/css/common.css
+++ b/css/common.css
@@ -195,14 +195,17 @@ footer img{
   margin-inline: auto;
   padding-inline: 40px;
 }
-@media only screen and (max-width: 600px) {
-  .footer-main {
-    flex-direction: column;
-  }
-}
 .footer-text {
   text-align: left;
   padding-inline-end: 30px;
   flex: 1;
   align-self: center;
+}
+@media only screen and (max-width: 600px) {
+  .footer-main {
+    flex-direction: column;
+  }
+  .footer-text {
+    text-align: center;
+  }
 }
